# Bavisitter

./: .coverage  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  biome.json  demo.ipynb  eslint.config.js  example.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  result_scatterplot.json  result_scatterplot_none.json  result_scatterplot_prompt.json  tsconfig.json  vite.config.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: pypi.yml
.husky/: pre-commit
bavisitter/: Bavisitter.py  __init__.py
bavisitter/model/: __init__.py
bavisitter/utils/: get_chunk_type.py  set_interpreter.py  system_prompt.py
src/bavisitter/: Bavisitter.py  __init__.py  df_manager.py
src/bavisitter/model/: __init__.py  ipc_model.py  message_model.py
src/bavisitter/tests/: test_Bavisitter.py
src/bavisitter/utils/: __init__.py  deep_equal.py  file_browser.py  get_chunk_type.py  set_interpreter.py  system_prompt.py  vjson.py
src/bavisitter/utils/tests/: test_vjson.py
src/llm4vis/: __init__.py
src/lullaby/: README.md  manifest.ts
src/lullaby/types/: IFixModel.ts  ILintModel.ts  IManifest.ts  IStateModel.ts  TFixType.ts  TLintLevel.ts  TLintType.ts  TTaskType.ts  index.ts
src/teach/: README.md  index.ts  manifests.ts
src/teach/actions/data/: domain.ts  nullish.ts
src/teach/actions/spec/: mark.ts  scale.ts
src/teach/linters/data/: isDataBalanced.ts  isDataSkewed.ts
src/teach/linters/encoding/: isChannelProp.ts
src/teach/linters/perception/: isOverplotted.ts
src/teach/model/: IActionModel.ts  ILintModel.ts  IManifest.ts  State.ts  TActionType.ts  TLintLevel.ts  TLintType.ts  index.ts
src/teach/triggers/: index.ts  isChannel.ts  isMark.ts
src/teach/utils/: getPaperFromVega.ts  histSpec.json  index.ts
src/videre/: README.md  index.ts  manifests.ts
src/videre/actions/data/: nullish.ts
src/videre/actions/spec/: mark.ts  scale.ts
src/videre/detectors/data/: index.ts  isCardinality.ts  isDataBalanced.ts  isDataSkewed.ts
src/videre/detectors/encoding/: index.ts  isChannel.ts  isChannelProp.ts  isMark.ts  isNotBinNice.ts  isNotVisualElements.ts  isNotZeroInPosition.ts  isOrdinalNotSorted.ts  isRedundantEncoding.ts  isShapesWithSize.ts  isTooManyBins.ts  noVisualElements.ts  noZeroInPosition.ts  shapesWithSize.ts
src/videre/detectors/perception/: index.ts  isOverplotted.ts  isUnderplotted.ts
src/videre/issues/: binIsNotNice.ts  cardinalityIsOne.ts  catColorsForOrdered.ts  contColorsForNominal.ts  excessiveCardinality.ts  index.ts  indistinctTheta.ts  labelOverlap.ts  lineForNominal.ts  noLabels.ts  noLegend.ts  noTicks.ts  noZeroInPosition.ts  ordinalNotSorted.ts  overplottedMarks.ts  redundantEncoding.ts  shapesWithSize.ts  smallMarks.ts  sparseMarks.ts  tooManyBins.ts
src/videre/model/: IActuatorModel.ts  IDetectorModel.ts  IManifest.ts  IPrompt.ts  State.ts  TActuatorType.ts  TDetectorType.ts  TResolverType.ts  index.ts
src/videre/resolvers/data/: domain.ts  index.ts  nullish.ts
src/videre/resolvers/spec/: index.ts  jittering.ts  scale.ts
src/videre/utils/: boolean.ts  getAlphaMapFromCanvas.ts  getCanvasFromPaper.ts  getMarksFromPaper.ts  getPaperFromVega.ts  index.ts  pieSpec.json  spec.json  spec.ts
src/widget/: README.md  main.tsx
src/widget/app/: App.tsx  Providers.tsx  theme.ts
src/widget/hooks/: index.ts  useCharts.ts  useCodeContent.ts  useColorMode.ts  useContent.ts  useData.ts  useIPC.ts  useMessages.ts  useModelMessage.ts  useRevisionContent.ts
src/widget/shared/mock/: chart.ts  chat.ts
src/widget/shared/types/: IChartSpec.ts  IMessage.ts  IMessageWithRef.ts  TColorMode.ts  TData.ts  TMessageType.ts  index.ts
src/widget/shared/utils/: chartSpec.ts  codeBlock.ts  index.ts  removeCodeBlocksFromString.ts  videre.ts
src/widget/shared/utils/__tests__/: codeBlock.test.ts
src/widget/store/: useChartStore.ts
src/widget/stores/: index.ts  useArtifactStore.ts  useChartStore.ts  useMessageStore.ts
src/widget/views/: ChartView.tsx  ChatView.tsx  CodeContent.tsx  Content.tsx  Header.tsx  HistoryView.tsx  Main.tsx  MessageContent.tsx  Messages.tsx  Placeholder.tsx  PlaceholderView.tsx  Prompt.tsx  PromptView.tsx  RevisionContent.tsx  TeacherView.tsx  TempButton.tsx  ThumbnailView.tsx  index.ts
